[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="MenuLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="MenuRoot" type="Control" parent="MenuLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="MenuFallback" type="ColorRect" parent="MenuLayer/MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0, 0, 0, 1)

[node name="MenuBackground" type="TextureRect" parent="MenuLayer/MenuRoot"]
mouse_filter = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
stretch_mode = 5

[node name="Panel" type="Panel" parent="MenuLayer/MenuRoot"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -460.0
offset_right = 480.0
offset_bottom = -160.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLayer/MenuRoot/Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = 48.0
offset_right = -48.0
offset_bottom = -48.0
theme_override_constants/separation = 18
alignment = 1

[node name="SubtitleLabel" type="Label" parent="MenuLayer/MenuRoot/Panel/VBoxContainer"]
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
text = "ATRAVESSE A RUA SEM SER SOVADO"

[node name="StartButton" type="Button" parent="MenuLayer/MenuRoot/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 110)
theme_override_font_sizes/font_size = 48
text = "Iniciar"
